Cleanup & group files into folders

--- a/checkout.html
+++ b/checkout.html
@@ -32,7 +32,7 @@
     <header class="header outer-container">
       <div class="max-width-container">
         <a class="btn-back" href="https://laptap.ee#tellima"
-          ><img src="arrow-back.svg" alt="Tagasi"
+          ><img src="/icons/arrow-back.svg" alt="Tagasi"
         /></a>
         <h1 class="heading-primary">Tellimus</h1>
       </div>
@@ -43,7 +43,7 @@
           <h2 class="heading-secondary">Ostukorv</h2>
           <article class="product-card">
             <div class="image-container">
-              <img class="product-img" alt="Pilt sülearvutilauast" src="hero.webp">
+              <img class="product-img" alt="Pilt sülearvutilauast" src="/images/hero.png">
             </div>
             <div class="product-text-container">
               <p class="product-title">Sülearvutilaud</p>
@@ -100,7 +100,7 @@
             <div class="stripe-climate-logo-text">
               <div class="img-container">
                 <img
-                  src="Stripe Climate Badge.svg"
+                  src="/icons/Stripe Climate Badge.svg"
                   alt="Stripe climate badge"
                 />
               </div>
@@ -144,7 +144,7 @@
             <div class="stripe-climate-logo-text">
               <div class="img-container">
                 <img
-                  src="Stripe Climate Badge.svg"
+                  src="/icons/Stripe Climate Badge.svg"
                   alt="Stripe climate badge"
                 />
               </div>
