--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     href="node_modules/@glidejs/glide/dist/css/glide.core.min.css"
   />
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bd5ad">
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+  <link rel="manifest" href="/favicons/site.webmanifest">
+  <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#5bd5ad">
   <meta name="msapplication-TileColor" content="#00a300">
   <meta name="theme-color" content="#e9f7f3">
   <script defer type="module" src="./dist/index.js"></script>
@@ -45,7 +45,7 @@
   <body>
     <header class="header outer-container bg-primary">
       <div class="max-width-container">
-        <a href="#"><img src="logo1.svg" class="logo" alt="Laptap logo" /></a>
+        <a href="#"><img src="/images/logo1.svg" class="logo" alt="Laptap logo" /></a>
         <nav class="nav">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -63,7 +63,7 @@
           </svg>
           <div class="navigation-links-container hidden">
             <button class="close-button">
-              <img src="close.svg" alt="close icon" />
+              <img src="/icons/close.svg" alt="close icon" />
             </button>
             <ul class="navigation-links">
               <li class="navigation-link">
@@ -129,17 +129,17 @@
           </div>
           <div class="hero-img-container">
             <picture>
-              <source type="image/webp" srcset="hero.webp">
+              <source type="image/webp" srcset="/images/hero.webp">
               <img
               class="hero-img"
-              src="hero.png"
+              src="/images/hero.png"
               alt="Pilt meie sülearvutilauast"
               />
           </picture>
 
             <img
             class="gradient-bg-img"
-            src="gradient-bg.webp"
+            src="/icons/gradient-bg.svg"
             alt="Gradient background"
           />
           
@@ -158,10 +158,10 @@
           <div class="about-flex">
             <div class="about-img-container">
               <picture>
-              <source type="image/webp" srcset="of_group.webp">
+              <source type="image/webp" srcset="/images/of_group.webp">
               <img
                 class="about-img"
-                src="of_group.png"
+                src="/images/of_group.png"
                 loading="lazy"
                 alt="Pilt meie sülearvutilauast"
               />
@@ -186,19 +186,19 @@
           </div>
           <div class="section-benefits-cards">
             <div class="section-benefits-card">
-              <img src="tick.svg" alt="Tick icon" class="benefit-card-img" />
+              <img src="/icons/tick.svg" alt="Tick icon" class="benefit-card-img" />
               <p class="benefit-card-text">Pikendage sülearvuti eluiga</p>
             </div>
             <div class="section-benefits-card">
-              <img src="tick.svg" alt="Tick icon" class="benefit-card-img" />
+              <img src="/icons/tick.svg" alt="Tick icon" class="benefit-card-img" />
               <p class="benefit-card-text">Vältige arvuti kuumenemist</p>
             </div>
             <div class="section-benefits-card">
-              <img src="tick.svg" alt="Tick icon" class="benefit-card-img" />
+              <img src="/icons/tick.svg" alt="Tick icon" class="benefit-card-img" />
               <p class="benefit-card-text">Hoidke arvuti puhtana</p>
             </div>
             <div class="section-benefits-card">
-              <img src="tick.svg" alt="Tick icon" class="benefit-card-img" />
+              <img src="/icons/tick.svg" alt="Tick icon" class="benefit-card-img" />
               <p class="benefit-card-text">Säästke hoolduskuludelt</p>
             </div>
           </div>
@@ -216,7 +216,7 @@
             <div class="feature-card">
               <img
                 class="feature-card-icon"
-                src="leaf.svg"
+                src="/icons/leaf.svg"
                 alt="Environmentally-friendly icon"
               />
               <div class="feature-card-text">
@@ -230,7 +230,7 @@
             <div class="feature-card">
               <img
                 class="feature-card-icon"
-                src="compact.svg"
+                src="/icons/compact.svg"
                 alt="Environmentally-friendly icon"
               />
               <div class="feature-card-text">
@@ -245,7 +245,7 @@
             <div class="feature-card">
               <img
                 class="feature-card-icon"
-                src="mahukas.svg"
+                src="/icons/mahukas.svg"
                 alt="Environmentally-friendly icon"
               />
               <div class="feature-card-text">
@@ -259,7 +259,7 @@
             <div class="feature-card">
               <img
                 class="feature-card-icon"
-                src="versatile.svg"
+                src="/icons/versatile.svg"
                 alt="Environmentally-friendly icon"
               />
               <div class="feature-card-text">
@@ -328,51 +328,51 @@
                 <ul class="glide__slides">
                   <li>
                     <picture>
-                    <source type="image/webp" srcset="1.webp">
+                    <source type="image/webp" srcset="/images/1.webp">
                     <img
                       class="product-img"
                       data-index="1"
                       loading="lazy"
-                      src="1.png"
+                      src="/images/1.png"
                       alt="Pilt meie sülearvutilauast"
                     />
                   </picture>
                   </li>
                   <li>
                     <picture>
-                      <source type="image/webp" srcset="3.webp">
+                      <source type="image/webp" srcset="/images/3.webp">
 
                       <img
                         class="product-img"
                         data-index="2"
                         loading="lazy"
-                        src="3.png"
+                        src="/images/3.png"
                         alt="Pilt meie sülearvutilauast"
                       />
                     </picture>
                   </li>
                   <li>
                     <picture>
-                      <source type="image/webp" srcset="5.webp">
+                      <source type="image/webp" srcset="/images/5.webp">
 
                       <img
                         class="product-img"
                         data-index="3"
                         loading="lazy"
-                        src="5.png"
+                        src="/images/5.png"
                         alt="Pilt meie sülearvutilauast"
                       />
                     </picture>
                   </li>
                   <li>
                     <picture>
-                      <source type="image/webp" srcset="6.webp">
+                      <source type="image/webp" srcset="/images/6.webp">
 
                       <img
                         class="product-img"
                         data-index="4"
                         loading="lazy"
-                        src="6.png"
+                        src="/images/6.png"
                         alt="Pilt meie sülearvutilauast"
                       />
                     </picture>
@@ -386,14 +386,14 @@
                   data-glide-dir="<"
                   class="button-previous"
                 >
-                  <img src="left.svg" alt="Previous image icon" />
+                  <img src="/icons/left.svg" alt="Previous image icon" />
                 </button>
                 <button
                   aria-label="Next"
                   data-glide-dir=">"
                   class="button-next"
                 >
-                  <img src="right.svg" alt="Next image icon" />
+                  <img src="/icons/right.svg" alt="Next image icon" />
                 </button>
               </div>
             </div>
@@ -433,7 +433,7 @@
                       Kui kaua aega kulub toote transpordiks?
                     </p>
                     <img
-                      src="downarrow.svg"
+                      src="/icons/downarrow.svg"
                       alt="Downarrow to open a frequently asked question."
                       class="faq-arrow"
                     />
@@ -450,7 +450,7 @@
                       Kas veebilehel maksmine on ohutu?
                     </p>
                     <img
-                      src="downarrow.svg"
+                      src="/icons/downarrow.svg"
                       alt="Downarrow to open a frequently asked question."
                       class="faq-arrow"
                     />
@@ -467,7 +467,7 @@
                     Kui palju maksab laua transport?
                     </p>
                     <img
-                      src="downarrow.svg"
+                      src="/icons/downarrow.svg"
                       alt="Downarrow to open a frequently asked question."
                       class="faq-arrow"
                     />
@@ -484,7 +484,7 @@
                     Mis saab minu andmetest pärast tellimuse esitamist?
                     </p>
                     <img
-                      src="downarrow.svg"
+                      src="/icons/downarrow.svg"
                       alt="Downarrow to open a frequently asked question."
                       class="faq-arrow"
                     />
@@ -501,7 +501,7 @@
                      Millised on laua mõõdud?
                     </p>
                     <img
-                      src="downarrow.svg"
+                      src="/icons/downarrow.svg"
                       alt="Downarrow to open a frequently asked question."
                       class="faq-arrow"
                     />
@@ -529,7 +529,7 @@
     <footer class="footer outer-container bg-primary p-btm-48 p-top-48">
       <div class="max-width-container">
         <a href="#"
-          ><img src="logo1.svg" class="logo logo-footer" alt="Laptap logo"
+          ><img src="/images/logo1.svg" class="logo logo-footer" alt="Laptap logo"
         /></a>
 
         <div class="footer-flex-container">
@@ -537,7 +537,7 @@
             
             <div class="footer-contact">
               <img
-                src="call.svg"
+                src="/icons/call.svg"
                 class="footer-contact-icon"
                 alt="phone icon"
               />
@@ -547,7 +547,7 @@
             </div>
             <div class="footer-contact">
               <img
-                src="email.svg"
+                src="/icons/email.svg"
                 class="footer-contact-icon"
                 alt="email icon"
               />
@@ -557,7 +557,7 @@
             </div>
             <div class="footer-contact">
               <img
-                src="instagram.svg"
+                src="/icons/instagram.svg"
                 class="footer-contact-icon"
                 alt="email icon"
               />
@@ -567,7 +567,7 @@
             </div>
             <div class="footer-contact">
               <img
-                src="facebook.svg"
+                src="/icons/facebook.svg"
                 class="footer-contact-icon"
                 alt="email icon"
               />
@@ -578,7 +578,6 @@
           </div>
           <div class="footer-container">
             <a href="tingimused.html" class="footer-text">Müügi- ja tagastustingimused</a>
-            <a href="#" class="footer-text">Privaatsuspoliitika</a>
           </div>
           <p class="footer-text">
             Copyright © 2021 Laptap. Kõik õigused kaitstud.
