--- a/tingimused.html
+++ b/tingimused.html
@@ -15,8 +15,8 @@
   <body>
     <header class="header outer-container">
       <div class="max-width-container">
-        <a class="btn-back" href="https://www.laptap.ee/"
-          ><img src="arrow-back.svg" alt="Tagasi"
+        <a class="btn-back" href="https://www.laptap.netlify.app/"
+          ><img src="/icons/arrow-back.svg" alt="Tagasi"
         /></a>
         <h1 class="heading-primary">Müügitingimused</h1>
       </div>
