--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <link
     rel="stylesheet"
-    href="node_modules/@glidejs/glide/dist/css/glide.core.min.css"
+    href="/css/glide.core.min.css"
   />
 
   <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
