Make back button in checkout point to correct domain

--- a/checkout.html
+++ b/checkout.html
@@ -31,7 +31,7 @@
   </div>
     <header class="header outer-container">
       <div class="max-width-container">
-        <a class="btn-back" href="https://laptap.ee#tellima"
+        <a class="btn-back" href="https://laptap.netlify.app/"
           ><img src="/icons/arrow-back.svg" alt="Tagasi"
         /></a>
         <h1 class="heading-primary">Tellimus</h1>
